--- a/Voice.csproj
+++ b/Voice.csproj
@@ -75,8 +75,10 @@
     <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
     </Reference>
+    <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Printing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -97,7 +99,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MVVM\Component\Debug\ProcessRunToggleButton.cs" />
+    <Compile Include="Core\Event\SoundUpdateEvent.cs" />
     <Compile Include="VoiceSystem\AudioService.cs" />
+    <Compile Include="VoiceSystem\Effect\Abs\IEffectModule.cs" />
+    <Compile Include="VoiceSystem\Effect\EffectPriority.cs" />
+    <Compile Include="VoiceSystem\Effect\PitchShifter.cs" />
     <Compile Include="VoiceSystem\VoiceExtractor.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -154,6 +160,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
